Fixed IpAuthenticationFilter for backward legacy code